cluster/infrastructure/istio/crs/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway # use istio ingress gateway deployment
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.${domain_name}"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ${domain_name} # secret must exist in istio-ingress
      hosts:
        - "*.${domain_name}"
