cluster/infrastructure/istio/crs/istio-authentik-authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ingress-authentik
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - "*.${domain_name}"
            notHosts:
              - "jellyfin.${domain_name}"
              - "s3.${domain_name}"
              - "blog.${domain_name}"
              - "vaultwarden.${domain_name}"
              - "grafana.${domain_name}"
              - "immich.${domain_name}"
              - "authentik.${domain_name}"
              - "frigate.${domain_name}"
              - "hass.${domain_name}"
              - "nix.${domain_name}"
              - "rss.${domain_name}"
              - "harbor.${domain_name}"
              - "git.${domain_name}"
              - "crowdsec-lapi.${domain_name}"
              - "block.${domain_name}"
              - "lore.${domain_name}"
